--- a/style.css
+++ b/style.css
@@ -7,23 +7,47 @@ body {
     font-family:  'Raleway', sans-serif;
     color: hsl(243, 87%, 12%);
     font-size: 1em;
+    margin: 0;
 }
-
+a {
+    color: #3da08f;
+}
 img{
     max-width: 100%;
 }
+h1,
+h2,
+h4 {
+	font-family: 'Raleway', sans-serif;
+}
+h2 {
+	font-size: 1.8em;
+	margin-top: 0;
+}
 
 .container{
-    padding: 20px;
+    padding: 30px;
     margin: 0 auto;
     max-width: 100%;
     width: 1400px;
 }
 .content{
     display: flex;
+    align-items: center;
+    flex-wrap: wrap;
 }
-.content > div{
-display: 1;
+.align-start {
+    align-items: flex-start;
+}
+.content > div,
+.content > ul{
+flex: 1;
+}
+.content > div:first-child{
+    margin-right: 20px;
+}
+.content > div:last-child{
+    margin-right: 20px;
 }
 
 nav {
@@ -40,6 +64,207 @@ nav ul{
   }
 
 nav ul li{
-    margin-left: 30px;
-
+    margin-left: 50px;
 }  
+nav ul a {
+    font-family: 'Raleway', sans-serif;
+    color: hsl(243, 76%, 15%);
+    text-decoration: none;
+}
+/*section*/
+form{
+display: flex;
+}
+input{
+    border: 1px solid hsl(243, 87%, 12%);
+    border-radius: 2px;
+    font-family: 'Raleway', sans-serif;
+    font-size: 14px;
+    flex: 0.7;
+    padding: 15px;
+    
+}
+input::placeholder {
+	color: hsl(0, 0%, 75%);
+}
+button{
+    border: 1px solid hsl(224, 93%, 58%);
+	background-color: hsl(224, 93%, 58%);
+	border-radius: 2px;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	color: #fff;
+	font-family: 'Raleway', sans-serif;
+	font-weight: 700;
+	font-size: 14px;
+	flex: 0.3;
+	padding: 15px;
+	margin-left: 10px;
+} 
+.light-blue{
+    background-color: hsl(240, 75%, 98%);
+    margin-top: 100px;
+    position: relative;
+    padding: 50px 0;
+}
+.light-blue::before{
+    content: '';
+    background-image: url('./images/bg-curve-desktop.svg');
+    background-size: cover;
+    background-position: center center;
+    position: absolute;
+    top: -60px;
+    left: 0;
+    height: 60px;
+    width: 100%;
+}
+ 
+.box-quotes {
+    background-color: #fff;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	border-radius: 5px;
+	padding: 25px;
+	margin-top: 40px;
+	width: 80%;
+}   
+.testimonial-box p {
+	font-size: 14px;
+	letter-spacing: 1px;
+	line-height: 1.7;
+} 
+.avatar-info{
+    display: flex;
+	margin-top: 20px;
+}
+.avatar-info img{
+    border-radius: 50%;
+	height: 50px;
+	margin-right: 10px;
+	width: 50px;
+}
+.avatar-info h3{
+    font-weight: 700;
+	margin: 0;
+}
+
+/* Blueish */
+.blueish {
+	background-color: hsl(238, 22%, 44%);
+	color: #fff;
+	padding: 50px 0;
+}
+
+.blueish form {
+	flex-direction: column;
+}
+
+.blueish form input {
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	border: none;
+	flex: 1;
+}
+
+.blueish form button {
+	margin: 20px 0 0;
+	width: 50%;
+}
+/* Footer styling */
+footer {
+	background-color: hsl(243, 87%, 12%);
+	color: #fff;
+	padding: 50px 0;
+}
+
+footer ul {
+	list-style-type: none;
+}
+
+footer ul li {
+	margin-bottom: 20px;
+}
+
+footer .social-media {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+footer .circle {
+	border: 1px solid #fff;
+	border-radius: 50%;
+	color: #fff;
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+	margin-right: 10px;
+	height: 40px;
+	width: 40px;
+	text-decoration: none;
+}
+
+footer p {
+	text-align: right;
+}
+
+
+@media screen and (max-width: 768px) {
+	body {
+		text-align: center;
+	}
+
+	nav {
+		flex-direction: column;
+		margin: 10px 0;
+	}
+
+	nav ul li {
+		margin: 10px 20px;
+	}
+
+	.light-blue::before {
+		background-image: url('./images/bg-curve-mobile.svg');
+		height: 80px;
+	}
+
+	.content {
+		flex-direction: column;
+	}
+
+	.content > div {
+		width: 100%;
+	}
+
+	.content > div:first-child {
+		margin-right: 0;
+	}
+
+	.content > div:last-child {
+		margin-left: 0;
+	}
+
+	.box-quotes {
+		width: 100%;
+	}
+
+	.blueish form input {
+		flex: 1;
+	}
+
+	.blueish form button {
+		margin: 20px 0;
+		width: 100%;
+	}
+
+	.ill {
+		margin-top: 30px;
+	}
+
+	.avatar-info {
+		justify-content: center;
+	}
+
+	footer ul {
+		padding: 0;
+		width: 100%;
+	}
+}
+
